# nodetool-mlx

./: README.md  pyproject.toml  requirements-dev.txt
src/nodetool/dsl/mlx/: mflux.py  tts.py  whisper.py
src/nodetool/mlx/: mlx_provider.py
src/nodetool/nodes/mlx/: mflux.py  tts.py  whisper.py
src/nodetool/package_metadata/: nodetool-mlx.json
