[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-mlx"
version = "0.6.0"
description = "Apple Silicon MLX nodes for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "nodetool-core>=0.6.0,<0.7.0",
    "mlx-whisper>=0.4.3",
    "mlx-audio>=0.2.5",
    "mflux>=0.10.0",
    "huggingface-hub>=0.24.6",
    "numpy>=1.26",
    "mlx-lm>=0.17.0",
    "mlx-vlm>=0.1.0",
]

[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.10.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-mlx.json",
    "package_metadata/nodetool-mlx.json",
]
